# ChangeLog for dev-perl/Bio-DB-Das-Chado
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Sep 2014; Justin Lecher <jlec@gentoo.org> -Bio-DB-Das-Chado-0.32.ebuild,
  +Bio-DB-Das-Chado-0.34.ebuild, metadata.xml:
  Version Bump; Bump to EAPI=5

  09 Feb 2012; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  Bio-DB-Das-Chado-0.32.ebuild:
  added the LICENSE line and require DBD-Pg to be installed before compiling
  this packge

*Bio-DB-Das-Chado-0.32 (30 Jul 2011)

  30 Jul 2011; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +Bio-DB-Das-Chado-0.32.ebuild, +metadata.xml:
  dev-perl/Bio-DB-Das-Chado: new package required by sci-biology/gbrowse
