@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -18,6 +18,6 @@ IUSE=""
 RDEPEND=""
 DEPEND="${RDEPEND}
 	dev-perl/DBD-Pg
-	virtual/perl-Module-Build"
+	dev-perl/Module-Build"
 
 SRC_TEST="do"
