@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Bio-DB-Das-Chado
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  15 Jun 2015; Justin Lecher <jlec@gentoo.org> Bio-DB-Das-Chado-0.34.ebuild,
+  metadata.xml:
+  dev-perl/Bio-DB-Das-Chado: Fix dependency problems due to recent mask of perl-
+  core packages
 
   24 Sep 2014; Justin Lecher <jlec@gentoo.org> -Bio-DB-Das-Chado-0.32.ebuild,
   +Bio-DB-Das-Chado-0.34.ebuild, metadata.xml:
@@ -16,4 +21,3 @@
   30 Jul 2011; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
   +Bio-DB-Das-Chado-0.32.ebuild, +metadata.xml:
   dev-perl/Bio-DB-Das-Chado: new package required by sci-biology/gbrowse
-
